FIXED: Replace FFmpegKit with Android MediaCodec
- Removed broken FFmpegKit dependency (Maven repo unavailable)
- Implemented native video conversion using Android MediaCodec/MediaMuxer
- No external dependencies required
- Build successful
- Ready for production launch

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,9 +68,7 @@ dependencies {
     // Billing
     implementation 'com.android.billingclient:billing-ktx:7.1.1'
     
-    // Video Conversion (FFmpegKit) - Needs correct version or alternative implementation
-    // TODO: Find correct FFmpegKit version or implement alternative video conversion
-    // implementation 'com.arthenica:ffmpeg-kit-full:5.1'
+    // No external video conversion library needed - using Android MediaCodec
     
     // Image loading
     implementation 'com.github.bumptech.glide:glide:4.16.0'
